--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "express": "^4.18.1",
     "minimist": "^1.2.6",
     "node-static-alias": "^1.1.2",
     "sqlite3": "^5.0.8"
